// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableCellInlineCode preserves escaped pipe chars inside text table cells 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "these | stay | escaped | inside | a single cell",
                    },
                  ],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "these | stay | escaped | inside | a single cell",
        },
      ],
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "type": "root",
}
`;

exports[`tableCellInlineCode splits table cells when inline code contains "unescaped" pipe chars 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "\`this",
                    },
                  ],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "splits",
                    },
                  ],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "\`this splits",
        },
      ],
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "type": "root",
}
`;

exports[`tableCellInlineCode unescapes escaped pipe chars inside inline code within table cells 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "type": "text",
                          "value": "one | two | three | four",
                        },
                      ],
                      "properties": Object {},
                      "tagName": "code",
                      "type": "element",
                    },
                  ],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "two",
                    },
                  ],
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "one | two | three | four two",
        },
      ],
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "type": "root",
}
`;
